added discussion of weird regions

--- a/legacy.tex
+++ b/legacy.tex
@@ -174,9 +174,8 @@ To account for the large number of tests, we used a two-stage Benjamini \& Hochb
 We tested SNPs, INDELs and repetitive regions separately as they may have different error rates (Table \ref{sigTable}).
 Lists of $Q$-associated variants and individuals with low $Q$ are provided as supplementary material \ref{rsIDList}.
 
-With the exception of chromosome 1 these variants appear to be evenly distributed across chromosomes (Figure \ref{CountPerChrom}).
-Clusters of variants reaching significance are apparent in 10kb regions of the genome (Figure \ref{VariantDensity}).
-These regions coincide with regions with known sequencing issues like HLA and other immunoglobulin receptor genes.
+$Q$-associated variants are distributed across the genome, with chromosome 1 showing an excess of such variants, and other chromosomes being relatively uniform (Figure \ref{CountPerChrom}).
+At a 10kb scale, we also see rather uniform distribution with a small number of regions showing a strong enrichment for such variants (Figure \ref{VariantDensity}). We identify 56 regions of 10kb each that collectively contain 1132 $Q$- associated (less than 5\% of problematic variants). These regions, which include known challenging regions such as HLA and other immunoglobulin receptor genes, are provided in Supplementary file \sgcomment{XX}. Distribution of association statistics in a sample of these regions is provided in Figure \ref{x}.
 
 \begin{table}
 \centering
@@ -534,7 +533,7 @@ Among the 12,086 variants associated with $Q$ in the GCAT model including all po
 
 \begin{figure}[h]
 \includegraphics[width=\hsize,keepaspectratio]{./Figures/Omni_AF.jpg}
-\caption{We found that 613 of the variants we identified as being associated to $Q$ were present on Illumina's Omni 2.5 chip. Variants highly associated to $Q$ tend to have low global allele frequencies.}}
+\caption{We found that 613 of the variants we identified as being associated to $Q$ were present on Illumina's Omni 2.5 chip. Variants highly associated to $Q$ tend to have low global allele frequencies.}
 \label{Omni}
 \end{figure}
 
